# PE-Hackathon

./: .env.example  .gitignore  README.md  compose.yml  init.sh  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  database.py  errors.py  logger.py
app/frontend/: .gitignore  .prettierignore  .prettierrc  components.json  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
app/frontend/src/: main.tsx  routeTree.gen.ts
app/frontend/src/components/: mode-toggle.tsx
app/frontend/src/components/ui/: badge.tsx  (+4 more)
app/frontend/src/lib/: api.ts
app/frontend/src/routes/: __root.tsx  index.tsx
app/frontend/src/styles/: global.css
app/models/: event.py  url.py  user.py
app/routes/: events.py  urls.py  users.py
app/utils/: isPostgres.py  redirect_cache.py
docs/: Production Engineering_ Quest Log.docx
docs/evidence/Reliability/: EVIDENCE.md  chaos-restart.md  error-handling.md  failure-modes.md  graceful-failure.md
docs/evidence/Reliability/artifacts/: chaos-restart-20260405-065047.md  chaos-restart-20260405-073914.md  chaos-restart-20260405-074313.md  chaos-restart-latest.md
k6/: .env.sample  run.sh  script.js  urls.csv
monitoring/: alloy.alloy  loki.yml  prometheus.yml  tempo.yml
monitoring/grafana/dashboards/: application.json  k6.json  logs.json
monitoring/nginx/: nginx.conf
scalability/: README.md
scalability/100_users/double_containers/: report.txt
scalability/100_users/initial/: report.txt
scalability/200_users/database_optimization/: results.txt
scalability/200_users/double_containers/: report.txt
scalability/200_users/initial/: report.txt
scalability/500_users/database_optimization/: report.txt
scalability/500_users/double_containers/: report.txt
scalability/500_users/initial/: README.md
scalability/50_users/double_containers/: report.txt
scalability/50_users/initial/: report.txt
scripts/: chaos-restart-proof.ps1
seeds/: events.csv  urls.csv  users.csv
tests/: conftest.py  test_api_health.py  test_api_urls.py  test_api_users.py  test_error_contract.py  test_event_logic.py  test_graceful_failure.py  test_url_logic.py  test_user_logic.py
(+9 files in other folders)
