[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.0",
    "flask>=3.1",
    "peewee>=3.17",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "flask-cors>=4.0",
    "opentelemetry-distro>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-asyncio==0.61b0",
    "opentelemetry-instrumentation-dbapi==0.61b0",
    "opentelemetry-instrumentation-logging==0.61b0",
    "opentelemetry-instrumentation-sqlite3==0.61b0",
    "opentelemetry-instrumentation-threading==0.61b0",
    "opentelemetry-instrumentation-urllib==0.61b0",
    "opentelemetry-instrumentation-wsgi==0.61b0",
    "opentelemetry-instrumentation-click==0.61b0",
    "opentelemetry-instrumentation-flask==0.61b0",
    "opentelemetry-instrumentation-grpc==0.61b0",
    "opentelemetry-instrumentation-jinja2==0.61b0",
    "opentelemetry-instrumentation-psycopg2==0.61b0",
    "opentelemetry-instrumentation-requests==0.61b0",
    "opentelemetry-instrumentation-urllib3==0.61b0",
    "pip>=26.0.1",
    "opentelemetry-exporter-prometheus>=0.61b0",
    "prometheus-client>=0.24.1",
    "redis>=5.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/models/__init__.py", "app/routes/__init__.py"]
